--- a/keynote.ipynb
+++ b/keynote.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "import os\n",
     "\n",
     "# Create the results directory\n",
-    "results_dir = 'train_test_results'\n",
+    "results_dir = 'results/train_test_results_sbert'\n",
     "if not os.path.exists(results_dir):\n",
     "    os.makedirs(results_dir)\n"
    ]
@@ -244,7 +244,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   }
  },
